start matrix transpose for my data

--- a/analysis/bri_gene_x_sample_count_matrix.Rmd
+++ b/analysis/bri_gene_x_sample_count_matrix.Rmd
@@ -76,104 +76,7 @@ This data has rows by individuale and has gene columns like the reads data.
 Conform single cell samples in reads and molecules files are in same order. 
 
 ```{r}
-stopifnot(anno_bri$individual == molecules_raw_bri$individual,
-          anno_bri$replicate == molecules_raw_bri$replicate,
-          anno_bri$well == molecules_raw_bri$well)
+#stopifnot(anno_bri$individual == molecules_raw_bri$individual,
+#          anno_bri$replicate == molecules_raw_bri$replicate,
+#          anno_bri$well == molecules_raw_bri$well)
 ```
-
-
-Transpose the matrix so it is also gene-x-sample.  
-
-```{r}
-molecules <- molecules_raw %>%
-  select(starts_with("ENSG"), starts_with("ERCC")) %>%
-  t
-colnames(molecules) <- anno$sample_id
-molecules[1:5, 1:5]
-```
-Now this file looks like the first one.
-
-###Read counts for bulk samples  
-Import raw read counts for bulk samples.  
-
-```{r}
-reads_bulk_raw <- fread("../../singleCellSeq/data/reads-raw-bulk-per-sample.txt")
-setDF(reads_bulk_raw) #converts the data.table to a data.frame
-
-```
-
-Create annotation file for the bulk samples as we did with the single cells. 
-
-```{r}
-anno_bulk <- reads_bulk_raw %>%
-  select(individual:well) %>%
-  mutate(batch = paste(individual, replicate, sep = "."),
-         sample_id = paste(batch, well, sep = "."))
-head(anno_bulk)
-```
-
-Now transpose the bulk read informaiton to match the gene-x-sample format.  
-
-```{r}
-reads_bulk <- reads_bulk_raw %>%
-  select(starts_with("ENSG"), starts_with("ERCC")) %>%
-  t
-colnames(reads_bulk) <- anno_bulk$sample_id
-reads_bulk[1:5, 1:5]
-```
-
-###Observed genes 
-I will look for genes out of the 20419 genes that were never observed in the experiment. 
-```{r}
-stopifnot(rownames(reads_bulk) == rownames(reads),
-          rownames(reads) == rownames(molecules))
-
-genes_observed_reads_bulk <- rownames(reads_bulk)[rowSums(reads_bulk) > 0]
-genes_observed_reads <- rownames(reads)[rowSums(reads) > 0]
-genes_observed_molecules <- rownames(molecules)[rowSums(molecules) > 0]
-stopifnot(genes_observed_molecules %in% genes_observed_reads)
-```
-18726 genes has at least one observation in the single read data. 18726 genes had at least one observation in the single cell molecule data. 18056 genes has at least one observation in te bulk read data. As expected, all genes with at least one observed molecule in at least one single cell also had at least one observed read in at least one single cell.  
-
-```{r}
-genes_venn <- venn.diagram(x = list("reads" = genes_observed_reads,
-                                    "molecules" = genes_observed_molecules,
-                                    "reads bulk" = genes_observed_reads_bulk),
-                           filename = NULL, euler.d = FALSE, scaled = FALSE)
-grid.newpage()
-grid.draw(genes_venn)
-```
-
-This ven diagram shows the intesection of the genes found in each type of sequencing data. I will now remove all genes with no observed in either bulk or single cell sample.
-
-```{r}
-genes_observed <- union(genes_observed_reads, genes_observed_reads_bulk)
-reads <- reads[rownames(reads) %in% genes_observed, ]
-molecules <- molecules[rownames(molecules) %in% genes_observed, ]
-reads_bulk <- reads_bulk[rownames(reads_bulk) %in% genes_observed, ]
-```
-
-
-###Write files 
-This code outputs the annotation files.  
-```{r}
-write.table(anno, "../../singleCellSeq/data/annotation.txt", quote=FALSE, sep="\t", row.names = FALSE)
-write.table(anno_bulk, "../../singleCellSeq/data/annotation-bulk.txt", quote=FALSE, sep = "\t", row.names=FALSE)
-```
-
-Output read counts. 
-```{r}
-write.table(reads, "../../singleCellSeq/data/reads.txt", quote = FALSE, sep = "\t", col.names = NA)
-write.table(reads_bulk, "../../singleCellSeq/data/reads-bulk.txt", quote=FALSE, sep="\t", col.names = NA)
-
-```
-Output molecule counts.  
-```{r}
-write.table(molecules, "../../singleCellSeq/data/molecules.txt", quote= FALSE, sep= "\t", col.names = NA)
-```
-
-###Session Information
-```{r}
-sessionInfo()
-```
-
