--- a/analysis/explore_bulkvsingle_gene.Rmd
+++ b/analysis/explore_bulkvsingle_gene.Rmd
@@ -97,7 +97,7 @@ library("scales")
 
 
 
-plot((molecules_and_mean_order$molecules_mean) , pch=46, cex=10, col=col_vec_onlySC, main = "Mean expression of molecules per gene", ylab=" Molecule count", xlab = "genes (blue are only single cell)")
+mean_expression <- plot((molecules_and_mean_order$molecules_mean) , pch=46, cex=10, col=col_vec_onlySC, main = "Mean expression of molecules per gene", ylab=" Molecule count", xlab = "genes (blue are only single cell)")
 
 
 
@@ -112,6 +112,8 @@ molecule_w.IQR <- cbind(molecules_and_mean, molecule_IQR)
 molecules_and_IQR_order <- arrange(molecule_w.IQR, desc(molecule_IQR))
 
 
-plot((molecules_and_IQR_order$molecule_IQR) , pch=46, cex=10, col=col_vec_onlySC, main = "IQR ofexpression of molecules per gene", ylab=" IQR in Molecule count", xlab = "genes (blue are only single cell)")
+IQR_plot <- plot((molecules_and_IQR_order$molecule_IQR) , pch=46, cex=10, col=col_vec_onlySC, main = "IQR of expression of molecules per gene", ylab=" IQR in Molecule count", xlab = "genes (blue are only single cell)")
 ```
+
+
 
