--- a/analysis/noisy_genes.Rmd
+++ b/analysis/noisy_genes.Rmd
@@ -16,6 +16,8 @@ knitr::read_chunk("chunks.R")
 
 **Code version:** `r workflowr::extract_commit(".", 1)$sha1`
 
+Work through some of this to get a better understanding of the data used for cell-cell variation.  
+
 ###Background and some observations  
 
 Prliminary investigation into expresssion noise at the transcriptional level. We looked at expression noise across all cells, including the cell that were not detected in the experiment. The investigation begins with coefficeint of variation- a popular measure for quantifying variation of the data.  
@@ -93,4 +95,338 @@ pluripotency_genes <- read.table("../../singleCellSeq/data/pluripotency-genes.tx
     - Compute rolling medians of gene expression levels,  
     - Squared CVs corresponding to rolling medians of gene expression levels, deviation of adjusted CVs.  
     
+*  DM values are coefficient of variance corrected for dependence on gene mean expression
+    
 ####Sanity-check Plots  
+
+```{r}
+theme_set(theme_bw(base_size = 8))
+plot_grid(
+  ggplot(data.frame(log10cv_1 = log10(ENSG_cv_adj$NA19098$cv^2),
+                    log10cv_2 = log10(ENSG_cv_adj$NA19101$cv^2)),
+       aes(x = log10cv_1, y = log10cv_2)) +
+    geom_point(cex = .4) +
+    xlab("NA19098 log10 squared-CV values") +
+    ylab("NA19101 log10 squared-CV values") +
+    ggtitle("Relationship between individual DM values") +
+    theme(legend.position = "none"),
+  ggplot(data.frame(dm1 = ENSG_cv_adj$NA19098$log10cv2_adj,
+                    dm2 = ENSG_cv_adj$NA19101$log10cv2_adj),
+       aes(x = dm1, y = dm2)) +
+    geom_point(cex = .4) +
+    xlab("NA19098 DM values") +
+    ylab("NA19101 DM values") +
+    ggtitle("Relationship between individual DM values") +
+    theme(legend.position = "none"),
+  ggplot(data.frame(dm = ENSG_cv_adj$NA19098$log10cv2_adj,
+                    log10_mean = log10(ENSG_cv_adj$NA19098$mean)),
+         aes(x = log10_mean, y = dm)) +
+      geom_point(cex = .4) +
+      xlab("log10 average molecule count") +
+      ylab("DM values") +
+      ggtitle("NA19098") +
+      theme(legend.position = "none"),
+    ggplot(data.frame(dm = ENSG_cv_adj$NA19101$log10cv2_adj,
+                    log10_mean = log10(ENSG_cv_adj$NA19101$mean)),
+         aes(x = log10_mean, y = dm)) +
+      geom_point(cex = .4) +
+      xlab("log10 average molecule count") +
+      ylab("DM values") +
+      ggtitle("NA19101") +
+      theme(legend.position = "none"),
+  ggplot(data.frame(dm = ENSG_cv_adj$NA19239$log10cv2_adj,
+                    log10_mean = log10(ENSG_cv_adj$NA19239$mean)),
+         aes(x = log10_mean, y = dm)) +
+      geom_point(cex = .4) +
+      xlab("log10 average molecule count") +
+      ylab("DM values") +
+      ggtitle("NA19239") +
+      theme(legend.position = "none"),
+  ncol = 2,
+  labels = LETTERS[1:5] )
+```
+
+###Check pluripotency and cell-cycle  
+Mark cell-cycle genes  
+
+```{r}
+genes <- rownames(ENSG_cv[[1]])
+ii_cellcycle_genes <- lapply(1:3, function(per_individual) {
+  genes %in% unlist(cell_cycle_genes)
+})
+names(ii_cellcycle_genes) <- names(ENSG_cv)[1:3]
+ii_cellcycle_genes <- do.call(c, ii_cellcycle_genes)
+
+ggplot(data.frame(do.call(rbind, ENSG_cv_adj[1:3]),
+                  dm = c(ENSG_cv_adj$NA19098$log10cv2_adj, 
+                         ENSG_cv_adj$NA19101$log10cv2_adj, 
+                         ENSG_cv_adj$NA19239$log10cv2_adj) ),
+       aes(x = log10(mean), y = dm )) +
+  geom_point(aes(col = group), cex = 1.2) + facet_wrap( ~ group) +
+  ggtitle("Cell-cycle genes") + 
+  geom_point(
+      data = subset(data.frame(do.call(rbind, ENSG_cv_adj[1:3]),
+                              dm = c(ENSG_cv_adj$NA19098$log10cv2_adj, 
+                                     ENSG_cv_adj$NA19101$log10cv2_adj, 
+                                     ENSG_cv_adj$NA19239$log10cv2_adj) ), 
+                 ii_cellcycle_genes), 
+       colour = "grey20", cex = 1.2) +
+  labs(x = "log10 average gene expression level",
+       y = "DM values")
+```
+
+Mark pluripotent genes  
+
+```{r}
+ii_pluripotent_genes <- lapply(1:3, function(per_individual) {
+  genes %in% unlist(pluripotency_genes)
+})
+names(ii_pluripotent_genes) <- names(ENSG_cv)[1:3]
+ii_pluripotent_genes <- do.call(c, ii_pluripotent_genes)
+
+ggplot(data.frame(do.call(rbind, ENSG_cv_adj[1:3]),
+                  dm = c(ENSG_cv_adj$NA19098$log10cv2_adj, 
+                         ENSG_cv_adj$NA19101$log10cv2_adj, 
+                         ENSG_cv_adj$NA19239$log10cv2_adj) ),
+       aes(x = log10(mean), y = dm )) +
+  geom_point(aes(col = group), cex = 1.2) + facet_wrap( ~ group) +
+  ggtitle("Pluripotent genes") + 
+  geom_point(
+      data = subset(data.frame(do.call(rbind, ENSG_cv_adj[1:3]),
+                              dm = c(ENSG_cv_adj$NA19098$log10cv2_adj, 
+                                     ENSG_cv_adj$NA19101$log10cv2_adj, 
+                                     ENSG_cv_adj$NA19239$log10cv2_adj) ), 
+                 ii_pluripotent_genes), 
+       colour = "grey20", cex = 1.2) +
+  labs(x = "log10 average gene expression level",
+       y = "DM values")
+```
+
+###Top ranked DM genes  
+####Ven diagram 1000 genes  
+Top 1000 genes based on DM (coeficient of variance corrected for dependence on expression)  
+
+```{r}
+genes<- rownames(ENSG_cv[1])
+library(gplots)
+# venn_cv_rank <- gplots::venn(
+#   list(NA19098 = genes[ which( rank(ENSG_cv_adj$NA19098$log10cv2_adj) 
+#                                > length(genes) - 1000 ) ],
+#        NA19101 = genes[ which( rank(ENSG_cv_adj$NA19101$log10cv2_adj) 
+#                                > length(genes) - 1000 ) ],
+#        NA19239 = genes[ which( rank(ENSG_cv_adj$NA19239$log10cv2_adj) 
+#                                > length(genes) - 1000 ) ] ))
+
+```
+
+Bottom 1000 genes based on DM.  
+
+```{r}
+genes <- rownames(ENSG_cv[[1]])
+library(gplots)
+gplots::venn(
+  list(NA19098 = genes[ which( rank(ENSG_cv_adj$NA19098$log10cv2_adj) 
+                               <= 1000 ) ],
+       NA19101 = genes[ which( rank(ENSG_cv_adj$NA19101$log10cv2_adj) 
+                               <= 1000 ) ],
+       NA19239 = genes[ which( rank(ENSG_cv_adj$NA19239$log10cv2_adj) 
+                               <= 1000 ) ] ))
+```
+
+
+Top 1000 genes based on means.  
+
+```{r}
+genes <- rownames(ENSG_cv[[1]])
+library(gplots)
+gplots::venn( 
+  list(NA19098 = genes[ which(rank(ENSG_cv[[1]]$mean) > length(genes) - 1000 ) ],
+       NA19101 = genes[ which(rank(ENSG_cv[[2]]$mean) > length(genes) - 1000 ) ],
+       NA19239 = genes[ which(rank(ENSG_cv[[3]]$mean) > length(genes) - 1000 ) ] ) )
+```
+
+Mark top ranked genes based on individual DM values.  
+
+```{r}
+df_plot <- data.frame(
+  cvs = c(ENSG_cv_adj[[1]]$log10cv2_adj, ENSG_cv_adj[[2]]$log10cv2_adj,
+          ENSG_cv_adj[[3]]$log10cv2_adj),
+  means = c(ENSG_cv[[1]]$mean, ENSG_cv[[2]]$mean, ENSG_cv[[3]]$mean),
+  individual = as.factor(rep(names(ENSG_cv)[1:3], each = NROW(ENSG_cv[[1]])) ) ) 
+
+cowplot::plot_grid(
+  ggplot( df_plot,
+        aes(x = log10(means), y = cvs ) ) +
+        geom_point( aes(col = as.factor(individual)), cex = 1.2 ) + 
+        facet_wrap( ~ individual) +
+        labs(x = "log10 average gene expression level", 
+             y = "DM values") +
+        geom_point(
+          data = df_plot[ rep( rank(ENSG_cv_adj$NA19098$log10cv2_adj) 
+                               > length(genes) - 1000, 3), ],
+          colour = "grey20", cex = 1.2 ) +
+        ggtitle("Top 1,000 genes in NA19098 based on DM values") +
+        theme(legend.position = "none"),
+  ggplot( df_plot,
+        aes(x = log10(means), y = cvs ) ) +
+        geom_point( aes(col = as.factor(individual)), cex = 1.2 ) + 
+        facet_wrap( ~ individual) +
+        labs(x = "log10 average gene expression level", 
+             y = "DM values") +
+        geom_point(
+          data = df_plot[ rep( rank(ENSG_cv_adj$NA19101$log10cv2_adj) 
+                               > length(genes) - 1000, 3), ],
+          colour = "grey20", cex = 1.2 ) +
+        ggtitle("Top 1,000 genes in NA19101 based on DM values") +
+        theme(legend.position = "none"),
+  ggplot( df_plot,
+        aes(x = log10(means), y = cvs ) ) +
+        geom_point( aes(col = as.factor(individual)), cex = 1.2 ) + 
+        facet_wrap( ~ individual) +
+        labs(x = "log10 average gene expression level", 
+             y = "DM values") +
+        geom_point(
+          data = df_plot[ rep( rank(ENSG_cv_adj$NA19239$log10cv2_adj) 
+                               > length(genes) - 1000, 3), ],
+          colour = "grey20", cex = 1.2 ) +
+        ggtitle("Top 1,000 genes in NA19239 based on DM values") +
+        theme(legend.position = "none"),
+  labels = LETTERS[1:4] )  
+```
+
+**SKIP SAME ANALYSIS BUT WITH 100 GENES**
+
+###GO analtsis - individual top genes  
+Analyze top 1000 gene in DM values.  
+
+```{r}
+# output top 1000 genes in DM values
+top1000DM_genes <-
+  data.frame(NA19098 = genes[ which( rank(ENSG_cv_adj$NA19098$log10cv2_adj) 
+                               > length(genes) - 1000 ) ],
+       NA19101 = genes[ which( rank(ENSG_cv_adj$NA19101$log10cv2_adj) 
+                               > length(genes) - 1000 ) ],
+       NA19239 = genes[ which( rank(ENSG_cv_adj$NA19239$log10cv2_adj) 
+                               > length(genes) - 1000 ) ],
+       stringsAsFactors = FALSE)
+
+# write the gene names out to a text file,
+# then copy and paste to GO Consortium interface
+
+for (ind in c("NA19098", "NA19101", "NA19239")) {
+  write.table(top1000DM_genes[[ind]],
+              file = paste0("../data/top-1000-dm-",ind,".txt"),
+              sep = "/t", quote = FALSE,
+              col.names = FALSE, row.names = FALSE)
+}
+write.table(rownames(molecules_final),
+            file = "../data/gene-names.txt",
+            sep = "/t", quote = FALSE,
+            col.names = FALSE, row.names = FALSE)
+```
+
+####GO consortium  
+We found no significant GO terms in PANTHER database.  
+
+####CPDB  
+ConsensusPATHDB-Human was used to perform GO over-representation analysis.  
+show example for 1 individaul here  
+
+**NA19098**
+```{r}
+# go_NA19098 <- 
+#   read.table("figure/cv-adjusted-summary-pois.Rmd/go-cpdb-top-1000-dm-NA19098.tab",
+#                sep = "\t",
+#                header = TRUE)
+# go_NA19098_sig <- go_NA19098[go_NA19098$q.value < .1, ]
+# go_NA19098_sig$term_name
+```
+
+###GO analysis- shared noisy genes  
+
+```{r}
+shared_venn <- gplots::venn(
+  list(NA19098 = genes[ which( rank(ENSG_cv_adj$NA19098$log10cv2_adj) 
+                               > length(genes) - 1000 ) ],
+       NA19101 = genes[ which( rank(ENSG_cv_adj$NA19101$log10cv2_adj) 
+                               > length(genes) - 1000 ) ],
+       NA19239 = genes[ which( rank(ENSG_cv_adj$NA19239$log10cv2_adj) 
+                               > length(genes) - 1000 ) ] ) )
+
+shared_genes <- attr(shared_venn, "intersections")[['111']]
+
+# write.table(shared_genes,
+#             file = ("../data/top-1000-dm-shared.txt"),
+#             sep = "/t", quote = FALSE,
+#            col.names = FALSE, row.names = FALSE)
+```
+ConsensusPATHDB-Human was used to perform GO over-representation analysis.  
+
+Of the 120 noisy genes that are common to all three individual cell lines, 38 of the genes are over-represented in the following functions:  
+```{r}
+# go_top_shared <- read.table("figure/cv-adjusted-summary-pois.Rmd/go-cpdb-top-1000-shared.tab",
+#                          sep = "\t",
+#                          header = TRUE)
+# go_top_shared <- go_top_shared[go_top_shared$q.value < .1, ]
+# go_top_shared$term_name
+```
+
+
+```{r}
+# go_top_shared_genes <- getGenes(gsub(";", ",",
+#                     as.character(go_top_shared$members_input_overlap_geneids)))
+# go_top_shared_genes <- go_top_shared_genes[!duplicated(go_top_shared_genes[ , "symbol"]), ]
+# kable(data.frame(symbol = go_top_shared_genes[ ,"symbol"],
+#                   name = go_top_shared_genes[,"name"]) )
+```
+
+###Differential DMs  
+Compute **median of absolute deviations (MAD)** to quantify dissimilarity of the individual DM meausres.  
+```{r}
+library(matrixStats)
+dm_matrix <- as.matrix(
+                data.frame(NA19098 = ENSG_cv_adj$NA19098$log10cv2_adj,
+                           NA19101 = ENSG_cv_adj$NA19101$log10cv2_adj,
+                           NA19239 = ENSG_cv_adj$NA19239$log10cv2_adj) )
+mad <- rowMedians( abs( dm_matrix - rowMedians(dm_matrix) ) )
+
+```
+
+####Top 100 ranked genes by MAD  
+ConsensusPATHDB-Human was used to perform GO over-representation analysis.  
+
+Look up top 100 genes in MAD values  
+
+```{r}
+mad_genes <- rownames(molecules_final)[rank(mad) > 
+                                             (length(mad) - 100) ]
+#write.table(mad_genes,
+#            file = "../data/mad-genes.txt",
+#            sep = "\t", quote = FALSE,
+#            col.names = FALSE, row.names = FALSE)
+```
+
+```{r}
+# library(mygene)
+# go_top <- read.table("figure/cv-adjusted-summary-pois.Rmd/go-cpdb-all-top.tab",
+#                          sep = "\t",
+#                          header = TRUE)
+# go_top <- go_top[go_top$q.value < .1, ]
+# as.character(go_top$term_name)
+```
+ 
+```{r}
+# go_top_genes <- getGenes(gsub(";", ",",
+#                     as.character(go_top$members_input_overlap_geneids)))
+# go_top_genes <- go_top_genes[!duplicated(go_top_genes[ , "symbol"]), ]
+# kable(data.frame(symbol =go_top_genes[ ,"symbol"],
+#                  name = go_top_genes[,"name"]) )
+
+```
+
+###Session Information  
+
+```{r}
+sessionInfo()
+```
+
